--- a/FormCodeGeneratorExtention/src/DataProcessors/FormGenerator/Forms/ФормаВыбораФормы/Form.form
+++ b/FormCodeGeneratorExtention/src/DataProcessors/FormGenerator/Forms/ФормаВыбораФормы/Form.form
@@ -24,6 +24,9 @@
         <paths xsi:type="form:DataPath">
           <segments>Объект.ДеревоФорм.Имя</segments>
         </paths>
+        <paths xsi:type="form:DataPath">
+          <segments>Объект.ДеревоФорм.Имя</segments>
+        </paths>
       </dataPath>
       <extendedTooltip>
         <name>ОбъектДеревоФормИмяРасширеннаяПодсказка</name>
@@ -73,6 +76,9 @@
         <common>true</common>
       </userVisible>
       <dataPath xsi:type="form:MultiLanguageDataPath">
+        <paths xsi:type="form:DataPath">
+          <segments>Объект.ДеревоФорм.ПолныйПутьКФорме</segments>
+        </paths>
         <paths xsi:type="form:DataPath">
           <segments>Объект.ДеревоФорм.ПолныйПутьКФорме</segments>
         </paths>
@@ -299,12 +305,12 @@
     <autoFill>true</autoFill>
   </autoCommandBar>
   <handlers>
-    <event>OnOpen</event>
-    <name>ПриОткрытии</name>
-  </handlers>
-  <handlers>
     <event>OnCreateAtServer</event>
     <name>ПриСозданииНаСервере</name>
+  </handlers>
+  <handlers>
+    <event>OnOpen</event>
+    <name>ПриОткрытии</name>
   </handlers>
   <autoTitle>true</autoTitle>
   <autoUrl>true</autoUrl>
